--- a/plugin.yaml
+++ b/plugin.yaml
@@ -132,6 +132,27 @@ data_types:
         required: false
         default: {}
 
+  cloudify.types.terraform.tfsec:
+    properties:
+      installation_source:
+        type: string
+        description: The URL to download the tfsec binary from.
+        default: 'https://github.com/aquasecurity/tfsec/releases/download/v1.1.3/tfsec-linux-amd64'
+      executable_path:
+        type: string
+        description: If the binary is located on the file system, this is the path on the file system.
+        required: false
+      config:
+        description:
+          The tfsec config file can override various tfsec configurations.
+        required: false
+      flags_override:
+        type: list
+        description:
+        default:
+          ['--debug']
+
+
   cloudify.types.terraform.tflint:
     properties:
       installation_source:
@@ -240,6 +261,10 @@ node_types:
       tflint_config:
         type: cloudify.types.terraform.tflint
         required: false
+      tfsec_config:
+        type: cloudify.types.terraform.tfsec
+        required: false
+
     interfaces:
       cloudify.interfaces.validation:
         check_status:
