Rd 4016 examples and integration tests to use the tfsec (#139)
* update cloudify.types.terraform.tfsec

* tfsec

* tfsec class and tests

* changelog update 0.18.10: TFsec

* version

* add to task tfsec

* add to init and docorators

* fix get_tfsec_config

* test --debug

* log

* add tfsec to terraform Module (#138)

* try this (#135)

* add tfsec to terraform Module

Co-authored-by: EarthmanT <EarthmanT@users.noreply.github.com>
Co-authored-by: nely <nely@cloudify.co>

* execute ?

* how to handle cwd/terraform_root_Module

* test

* works but need to fix config with tha name of file --config-file name.yml

* works for json

* fix flake8

* fix flake8

* fix test plugin - rename setup_tflit to setup_linters

* fix test plugin

* tfsec.py

* tests plugin tfsec

* tests plugin tfsec

* fix test plugin tfsec

* config tfsec

* task

* Need to add test_apply_check_tfsec

* test_plugin

* test plugin and test_apply_check_tfsec works!

* remove log

* check_tflint() , tf.check_tfsec not need double check

* update constraint utils sdk pyyaml

Co-authored-by: nely <nely@cloudify.co>
Co-authored-by: EarthmanT <trammell@cloudify.co>
Co-authored-by: EarthmanT <EarthmanT@users.noreply.github.com>

--- a/plugin.yaml
+++ b/plugin.yaml
@@ -148,9 +148,10 @@ data_types:
         required: false
       flags_override:
         type: list
-        description:
-        default:
-          ['--debug']
+        description: 'tfsec can by run with no arguments and will act on the current folder.
+          For a richer experience, there are many additional command line arguments that you can make use of.
+          For example: [ "debug", "run-statistics"] (without --)'
+        default: []
 
 
   cloudify.types.terraform.tflint:
@@ -271,7 +272,7 @@ node_types:
           implementation: tf.cloudify_tf.tasks.check_status
       cloudify.interfaces.lifecycle:
         create:
-          implementation: tf.cloudify_tf.tasks.setup_tflint
+          implementation: tf.cloudify_tf.tasks.setup_linters
         configure:
           implementation: tf.cloudify_tf.tasks.apply
         start:
