Rd 4261 clone cloudify terraform plugin quiet mode (#147)
* holding place

* bump version

--- a/plugin.yaml
+++ b/plugin.yaml
@@ -2,7 +2,7 @@ plugins:
   tf:
     executor: central_deployment_agent
     package_name: cloudify-terraform-plugin
-    package_version: '0.18.10'
+    package_version: '0.18.11'
 
 dsl_definitions:
 
@@ -131,6 +131,18 @@ data_types:
         description: A dictionary of environment variables.
         required: false
         default: {}
+      flags_override:
+        type: list
+        description: |
+          If you wish to add or modify flags, configure here.
+          # A list of flag elements. Strings will be appended to the command.
+          # Dicts will be translated to bash key=vars.
+          # For example, "{'loglevel': 'debug'}", becomes "--loglevel=debug".
+        default: []
+      log_stdout:
+        type: boolean
+        default: true
+        description: Set to false, if you wish to suppress stdout logging for apply and plan commands.
 
   cloudify.types.terraform.tfsec:
     properties:
