--- a/v2_plugin.yaml
+++ b/v2_plugin.yaml
@@ -286,8 +286,9 @@ data_types:
         description: If the binary is located on the file system, this is the path on the file system.
         required: false
       tags:
-        type: dict
+        type: list
         description: # For example: {'id': 'abc', 'user_name': 'my_name'}
+        required: false
         default: []
       flags_override:
         type: list
