some-more-local-handling (#185)
* some-more-local-handling

* Handle local paths (#187)

* fix issue in v2_plugin.yaml

* terratag updates

* some-more-local-handling

* handle local paths

Co-authored-by: ahmadiesa-abu <ahmad@cloudify.co>
Co-authored-by: Ahmad Musa <53178237+ahmadiesa-abu@users.noreply.github.com>

Co-authored-by: EarthmanT <EarthmanT@users.noreply.github.com>

--- a/v2_plugin.yaml
+++ b/v2_plugin.yaml
@@ -289,7 +289,7 @@ data_types:
         type: list
         description: # For example: {'id': 'abc', 'user_name': 'my_name'}
         required: false
-        default: []
+        default: {}
       flags_override:
         type: list
         required: false
