--- a/v2_plugin.yaml
+++ b/v2_plugin.yaml
@@ -4,21 +4,6 @@ plugins:
     package_name: cloudify-terraform-plugin
     package_version: '0.18.18'
 
-blueprint_labels:
-  obj-type:
-    values:
-      - terraform
-
-labels:
-  obj-type:
-    values:
-      - terraform
-
-resource_tags:
-  tenant: { get_sys: [ tenant, name ] }
-  deployment_id: { get_sys: [ deployment, id ] }
-  owner: { get_sys: [ deployment, owner ] }
-
 dsl_definitions:
 
   terraform_config: &terraform_config
@@ -479,12 +464,12 @@ workflows:
     mapping: tf.cloudify_tf.workflows.refresh_resources
     parameters: &terraform_workflow_params
       node_instance_ids:
-        # type: list commented for 4.X support
+        type: node_instance_ids
         default: []
         description: |
           List of node instance ID's to refresh for.
       node_ids:
-        # type: list commented for 4.X support
+        type: node_instance_ids
         default: []
         description: |
           List of node templates to refresh for.
@@ -538,3 +523,18 @@ workflows:
         description: >
           resource-specific ID to identify that resource being imported.
         type: string
+
+blueprint_labels:
+  obj-type:
+    values:
+      - terraform
+
+labels:
+  obj-type:
+    values:
+      - terraform
+
+resource_tags:
+  tenant: { get_sys: [ tenant, name ] }
+  deployment_id: { get_sys: [ deployment, id ] }
+  owner: { get_sys: [ deployment, owner ] }
