--- a/plugin.yaml
+++ b/plugin.yaml
@@ -165,6 +165,11 @@ data_types:
         type: string
         description: file Name .tfvars
         required: false
+      update_secrets:
+        type: dict
+      obfuscate_sensitive:
+        type: boolean
+        default: false
 
 
   cloudify.types.terraform.tfsec:
