CYBL-1687-Handle-Senstive-Outputs

--- a/plugin.yaml
+++ b/plugin.yaml
@@ -165,8 +165,9 @@ data_types:
         type: string
         description: file Name .tfvars
         required: false
-      update_secrets:
+      store_output_secrets:
         type: dict
+        description: add/update secrets from terraform senstive outputs.
       obfuscate_sensitive:
         type: boolean
         default: false
